crates/swc_ecma_parser/tests/test262-error-references/fail/2fa321f0374c7017.js.stderr
error: Unexpected character 'ğ–«µ'
 --> $DIR/tests/test262-parser/fail/2fa321f0374c7017.js:1:6
  |
1 | var _ğ–«µ = 11;
  |      ^

